unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/Vehicle_Insurance_Fee_Master__c.object-meta.xml
<CustomObject>
    <label>Vehicle Insurance Fee Master</label>
    <nameField>
        <displayFormat>VIF-{0000}</displayFormat>
        <label>Vehicle Insurance Fee Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Insurance Fees Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>