unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/ET_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ET_Emirates__c</fullName>
    <label>Emirates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Emirates_for_Pricing</valueSetName>
    </valueSet>
</CustomField>