unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/ET_Insurance_Rate_3rd_Year__c.field-meta.xml
<CustomField>
    <fullName>ET_Insurance_Rate_3rd_Year__c</fullName>
    <label>Insurance Rate (3rd Year)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>