unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/ET_Minimum_Vehicle_Value__c.field-meta.xml
<CustomField>
    <fullName>ET_Minimum_Vehicle_Value__c</fullName>
    <label>Minimum Vehicle Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>