unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/ET_Number_of_Depreciated_years__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_Depreciated_years__c</fullName>
    <label>Number of Depreciated years</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>