unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/ET_Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>ET_Other_Cost__c</fullName>
    <label>Other Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>