unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/ET_Passenger_Cost_Per_Seat__c.field-meta.xml
<CustomField>
    <fullName>ET_Passenger_Cost_Per_Seat__c</fullName>
    <label>Passenger Cost(Per Seat)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>