unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/ET_Vehicle_Type_Master__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Type_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Type Master</label>
    <referenceTo>ET_Vehicle_Type_Master__c</referenceTo>
    <relationshipLabel>Vehicle Insurance Fees Master</relationshipLabel>
    <relationshipName>Vehicle_Insurance_Fees_Master</relationshipName>
    <type>Lookup</type>
</CustomField>