unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ET_Vehicle_Type_Value_Set</valueSetName>
    </valueSet>
</CustomField>