unpackaged/main/default/objects/Vehicle_Insurance_Fee_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>ET_Emirates__c</columns>
    <columns>ET_Insurance_Rate_1st_Year__c</columns>
    <columns>ET_Insurance_Rate_2nd_Year__c</columns>
    <columns>ET_Insurance_Rate_3rd_Year__c</columns>
    <columns>ET_Insurance_Rate_4th_Year__c</columns>
    <columns>ET_Insurance_Rate_5th_Year__c</columns>
    <columns>ET_Insurance_Rate_6th_Year__c</columns>
    <columns>ET_Insurance_Rate_7th_Year__c</columns>
    <columns>ET_Insurance_Rate_8th_Year__c</columns>
    <columns>ET_Passenger_Cost_Per_Seat__c</columns>
    <columns>ET_Driver_Cost__c</columns>
    <columns>ET_Ambulance_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>